# ai-research-agent-platform

./: .dockerignore  .env.example  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  demo.js  docker-compose.yml  pyproject.toml
.github/workflows/: pages.yml
alembic/: env.py
alembic/versions/: 20260524_0001_initial_schema.py
app/: __init__.py  celery_compat.py  config.py  db.py  main.py  worker.py
app/agents/: __init__.py  critic.py  planner.py  researcher.py  supervisor.py  synthesizer.py
app/models/: __init__.py  brief.py  finding.py  finding_source_fragment.py  gap.py  report.py  round.py  source.py  source_fragment.py  task.py
app/schemas/: agent.py  finding.py  task.py
app/services/: __init__.py  evidence.py  orchestrator.py  reporting.py  tasks.py
app/templates/: base.html  brief_board.html  evidence_explorer.html  home.html  report.html  task_overview.html
app/tools/: __init__.py  search.py  validation.py
app/web/: __init__.py  routes.py
io/: index.html  styles.css
scripts/: start-worker.sh
tests/: conftest.py  test_io_release_page.py  test_readme_commands.py
tests/agents/: test_critic_validation.py  test_planner_briefs.py  test_supervisor_schema.py
tests/api/: test_create_task.py  test_get_task.py  test_health_detail.py  test_list_tasks.py  test_task_artifacts.py
tests/db/: test_session_factory.py
tests/integration/: test_persisted_task_flow.py  test_task_execution_flow.py  test_task_failure_flow.py
tests/models/: test_persisted_research_graph.py  test_task_models.py  test_task_timestamps.py
(+12 files in other folders)
