[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ai-research-agent-saas"
version = "0.1.0"
description = "Supervised multi-agent research platform for evidence-grounded company intelligence."
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "alembic>=1.13,<1.14",
  "celery>=5.4,<5.5",
  "fastapi>=0.115,<0.116",
  "jinja2>=3.1,<3.2",
  "pydantic>=2.8,<2.9",
  "pydantic-settings>=2.3,<2.4",
  "psycopg[binary]>=3.2,<3.3",
  "python-multipart>=0.0.9,<0.1",
  "redis>=5.0,<6",
  "sqlalchemy>=2.0,<2.1",
  "uvicorn>=0.30,<0.31",
]

[project.optional-dependencies]
dev = [
  "httpx>=0.28,<0.29",
  "pytest>=8.2,<8.3",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]

[tool.setuptools.packages.find]
include = ["app*"]
